k8s-ingress/nginx-plus-ingress/health-checks/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe01
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "cafe01.example.com"
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe02
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.com/health-checks: "true"
    nginx.com/health-checks-mandatory: "true"
    nginx.com/health-checks-mandatory-queue: "500"
spec:
  rules:
  - host: "cafe02.example.com"
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
